python-reahl (7.0.0) unstable; urgency=low

 * Change internal packaging to use setup.cfg (#404).
 * Updated documentation (#403).
 * Fixed incorrect packaging of examples (#406).

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 02 Feb 2023 15:52:00 +0200

python-reahl (6.1.1) unstable; urgency=low

 * Remove memoized decorator in favour of functools.cached_property (#401).

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 02 Feb 2023 15:52:00 +0200

python-reahl (6.1.0) unstable; urgency=low

 * Updated error message (#360).
 * Listing examples bug fix (#354).
 * Use newer twine (#355).
 * Improved exception (#347).
 * Fixed in-memory tables for sqlite (#366).
 * Improved CSRF error handling during AJAX (#364).
 * Removed localising of config settings (#357).
 * Added left_aligned kwarg to NavbarLayout.add.
 * Added space_before and space_after to InlineFormLayout.add_input.
 * Added placeholder to PasswordInput.
 * Fixed incorrect handling of timeouts (#383).
 * Made create_args for sqlalchemy configurable (#232).
 * Read and configure test dependencies from fixture (#237).
 * Enable to toggle the execution of runtime checks and other performance enhancements (#358).
 * Implement ExecutionContext with contextvars, mandating it to be used as ContextManager from now on (#359).
 * Cache session data on UrlBoundView (#365).
 * Added size to SelectInput (#362).
 * Changed placeholder to display the default of the field under certain conditions (#363).
 * Deprecated use of @exposed in favour of ExposedNames (#373).
 * Changed ChoiceField to be able to delay fetching the list of Choices (#369).
 * Added set_refresh_widgets to allow refreshing multiple widgets (#375).
 * Replaced usage of pkg_resources.resource_filename with importlib.resources.files (#390).
 * Added Event.with_returned_argument to allow dynamically supplying argument values to an Event (#371).
 * Changed DateField to correctly use dayfirst based on the current locale (#194).